# master_experiment

./: .gitignore  README.md  common_func.py  exercise1.py  exercise2.py  exercise3.py  exercise4.py  exercise5.py  main.py  pyproject.toml
output/exercise1/: result.txt
output/exercise1/simulation_values/: d_values_baseline.npy  i_values_baseline.npy  r_values_baseline.npy  s_values_baseline.npy
output/exercise3/: result.txt  utility_values.pkl
output/exercise4/: utility_values.csv
output/exercise4/simulation_values/: simulation_values_b10_100weeks.pkl  simulation_values_b10_25weeks.pkl  simulation_values_b10_50weeks.pkl  simulation_values_b5_100weeks.pkl  simulation_values_b5_25weeks.pkl  simulation_values_b5_50weeks.pkl  simulation_values_b6_100weeks.pkl  simulation_values_b6_25weeks.pkl  simulation_values_b6_50weeks.pkl  simulation_values_b8_100weeks.pkl  simulation_values_b8_25weeks.pkl  simulation_values_b8_50weeks.pkl
output/exercise5/: result.txt
output/exercise5/utility_values/: phi=0.002.pkl  phi=0.029.pkl  phi=0.094.pkl
